refac: melhora validacao de entrada e organizacao do fluxo principal